# on-your-feet

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/on_your_feet/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
model/: classification_shoes.ipynb  pyproject.toml
test/: widget_test.dart
web/: index.html  manifest.json
